# llm_training

./: .gitignore  .pre-commit-config.yaml  2b.py  CHANGELOG.md  CONTRIBUTING.md  README.md  data_prep.py  ds_config.json  mkdocs.yml  mmlu.json  openbookqa.json  pyproject.toml  requirements.txt  sft.py  tensorization.py
.github/workflows/: python-ci.yml
config/: accelerate_config.yaml  merge_config.yaml
configs/: accelerate_config_mix.yaml  data_prep_config.json  evaluate_config.json  sft_config.json
evaluation_results/: PY007_TinyLlama-1.1B-Chat-v0.1_all_results.json  microsoft_Phi-3-mini-4k-instruct_all_results.json
llm_training/: __init__.py  cli.py  data.py  evaluation.py  model_loader.py  training.py  utils.py
notebooks/: test.ipynb
scripts/: __init__.py  data_prep.py  data_prep_boolq.py  data_prep_gsm8k.py  data_prep_hellaswag.py  data_prep_mmlu.py  data_prep_openbookqa.py  evaluate_model.py  evaluate_model_tensor.py  model_loader.py  sft.py  sft_tensor.py  test.py
scripts/compression/: auto_reduction.py  auto_reduction_save.py  user_reduction.py
tests/: test_data.py  test_evaluation.py  test_training.py
